add post send message
